2008-03-08  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/extconf.rb, ext/oci8/oci8lib.c, ext/oci8/rowid.c:
	    rowid.c is deleted. OCIRowid is no longer in use.
	* ext/oci8/oci8.h, ext/oci8/attr.c: oci8_get_rowid_attr()
	    is moved from rowid.c and returns a String instead of
	    an OCIRowid object.
	* ext/oci8/stmt.c: fix a rdoc comment of OCI8::Cursor#rowid.
	* lib/oci8/oci8.rb: fetch a rowid value as a String.
	* test/test_all.rb, test/test_rowid.rb: add a rowid testcase.

2008-03-07  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/apiwrap.c.tmpl, ext/oci8/apiwrap.rb, ext/oci8/apiwrap.yml:
	    add all OCI functions to 'apiwrap.yml'.
	* ext/oci8/object.c: use OCIObjectPin_nb() instead of OCIObjectPin().
	* ext/oci8/oci8lib.c: call OCIBreak in rb_thread_blocking_region()
	    to prevent the thread from being blocked.

2008-03-06  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/apiwrap.c.tmpl, ext/oci8/apiwrap.h.tmpl:
	    rewrite apiwrap.[ch].tmpl. All non-static variables
	    and functions have 'oci8_' prefix name.
	* ext/oci8/apiwrap.rb, ext/oci8/apiwrap.yml,
	  ext/oci8/extconf.rb: change format of apiwrap.yml
	    to use both OCIAttrGet() and OCIAttrGet_nb().
	* ext/oci8/oci8.c, test/config.rb: add OCI8.oracle_client_version.

2008-03-05  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/env.c, ext/oci8/oci8.h: use native API to get a thread
	    local errhp (ruby 1.9 only)
	      pthread: pthread_getspecific()
	      win32:   TlsGetValue()

2008-03-04  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/extconf.rb: output a message to say 'install
	    a ruby development package' when 'mkmf.rb' is not
	    found and the platform is Linux. Both ruby and its
	    development package are required to compile extension
	    libraries on Linux.

2008-03-04 KUBO Takehiro <kubo@jiubao.org>
	* ext/oci8/ocinumber.c: fix for ruby-1.9.0-1.
	    The arguments of rb_num_coerce_cmp() and rb_num_coerce_bin()
	    are changed in ruby-1.9.0-1.
